# Simplix-Unico

./: app.py  pyproject.toml  requirements.txt  users.db
static/: style.css
templates/: cadastrar.html  cadastrar_proposta.html  cadastrar_proposta_cliente.html  cadastrar_proposta_conclusao.html  cadastrar_proposta_resumo.html  editar.html  editar_proposta.html  esteira.html  index.html  login.html  register.html  usuarios.html
