[tool.poetry]
name = "consigtech-usuarios"
version = "0.1.0"
description = "Sistema ConsigTech com usuários, tabelas e integração"
authors = ["Seu Nome <seuemail@dominio.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
Flask = "3.0.3"
requests = "2.32.3"
Werkzeug = "3.0.4"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
